[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "essentials"
dynamic = ["version"]
description = "General purpose classes and functions"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Roberto Prevato", email = "roberto.prevato@gmail.com" }]
keywords = ["core", "utilities"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
urls = { homepage = "https://github.com/Neoteroi/essentials" }

[tool.hatch.version]
path = "essentials/__init__.py"

[tool.setuptools.packages.find]
include = ["essentials", "essentials.typesutils", "essentials.decorators"]
